--- a/package.json
+++ b/package.json
@@ -22,12 +22,20 @@
     "@angular/router": "~8.2.14",
     "@capacitor/core": "2.0.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/device-motion": "^5.24.0",
+    "@ionic-native/flashlight": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/vibration": "^5.24.0",
     "@ionic/angular": "^5.0.0",
     "cordova-android": "8.1.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-flashlight": "^3.2.0",
+    "cordova-plugin-vibration": "^3.1.1",
     "core-js": "^2.5.4",
     "firebase": ">= 5.5.7 <8",
+    "howler": "^2.1.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -77,7 +85,10 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-flashlight": {},
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "android"
